Introducing new rest controller for travel requests and new requests and methods in the service layer